Fix for body click on ios

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -6,6 +6,7 @@ body {
     color: @color-theme-text;
     font-family: 'Open Sans', sans-serif;
     margin: 0;
+    cursor: pointer; // fix for click on body on ios
 }
 
 h1 {
